Archive2/3f/bd0422461dd4bb/output
main.cpp: In function 'int main()':
main.cpp:11:34: error: invalid conversion from 'int' to 'TestEnum' [-fpermissive]
     TestEnum next = test_value + 1;
                                  ^
main.cpp:11:14: warning: unused variable 'next' [-Wunused-variable]
     TestEnum next = test_value + 1;
              ^
